--- a/css/style.css
+++ b/css/style.css
@@ -436,7 +436,7 @@ a {
 
 .projects-label {
   position: absolute;
-  top: 1.75rem;
+  top: 5rem;
   left: 3rem;
   z-index: 10;
 }
